main2_output.txt
  File "main.py", line 3
    def __init__(self, nombre, precio, cantidad_disponible):
    ^
IndentationError: unexpected indent


** Process exited - Return Code: 1 **
Press Enter to exit terminal